--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
 			padding-top: 40px;
 		}
 		.alert {
-			border-radius: 0;
 			position: absolute;
 			top: 325px;
 			left: 0;
@@ -42,11 +41,15 @@
 		}
 		.board td {
 			border: 1px solid #999;
-			height: 100px;
-			width: 100px;
-			text-align: center;
+            width: 1.5em;
+            /* Some non-ideal vertical centering */
+            /* Given font-size/height ratio, vertical align doesn't work */
+			height: 0.5em;
+            padding-top: 0.1em;
+            padding-bottom: .35em;
 			
-			font-size: 100px;
+            text-align: center;
+			font-size: 8em;
 			color: #AA3434;
 		}
 		.board td:hover {
@@ -74,6 +77,12 @@
 		.x:before {
 		    content: "×";
 		}
+        /* Make board a little smaller on your phone */
+        @media (max-width: 480px) {
+            .board td {
+                font-size: 5em;
+            }
+        }
 
 	</style>
 </head>
